force-app/main/default/objects/Expense_Tracking__c/Expense_Tracking__c.object-meta.xml
<CustomObject>
    <description
  >Object used for tracking expenses on events and projects at e.Republic.</description>
    <label>Expense Tracking</label>
    <nameField>
        <displayFormat>EXPSHEET-{0000}</displayFormat>
        <label>Expense Sheet</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>