force-app/main/default/objects/Expense_Tracking__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >The event that this record is tracking the expenses for.</description>
    <inlineHelpText
  >The event that this record is tracking the expenses for.</inlineHelpText>
    <label>Event</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Expense Tracking</relationshipLabel>
    <relationshipName>Expense_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>