force-app/main/default/objects/Expense_Tracking__c/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <formula>Event__r.GL_Code_Finance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Code</label>
    <type>Text</type>
</CustomField>