force-app/main/default/objects/Expense_Tracking__c/fields/PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>PO_Amount__c</fullName>
    <description
  >Enter the total amount approved for expenses for this event.</description>
    <inlineHelpText
  >Enter the total amount approved for expenses for this event.</inlineHelpText>
    <label>PO Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>