force-app/main/default/objects/Expense_Tracking__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Purchase number for this event tracking sheet.</description>
    <inlineHelpText
  >Purchase number for this event tracking sheet.</inlineHelpText>
    <label>PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>