force-app/main/default/objects/Expense_Tracking__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <description
  >Roll-up summary of all of the expenses on this Expense Tracking sheet.</description>
    <inlineHelpText
  >Roll-up summary of all of the expenses on this Expense Tracking sheet.</inlineHelpText>
    <label>Total Expenses</label>
    <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Expense_Tracking_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>